@@ -35,6 +35,7 @@
           the <em>--enable-python3-fix</em> ./configure option
           installs a wrapper.</li>
       <li>Building requires <em>modinfo</em>, often in the package kmod.
+      <li>Building requires <em>pkg-config</em>.
       <li>Building requires kernel headers, often in the kernel-headers
           package.</li>
       <li>xsltproc </li>
