@@ -130,7 +130,7 @@
          durations) otherwise sent, and can also be used to "receive"
          simulated data from a file.</li>
       <li>
-         <a href="girs_driver.html">girs driver</a> receives and sends
+         <a href="girs.html">girs driver</a> receives and sends
 	 IR data using a serially connected remote device compliant
 	 with the Girs standard (for example for usage with the Arduino).</li>
       <li>
@@ -140,8 +140,8 @@
          <a href="imon.html">imon</a> handles data from various
          iMON remotes.</li>
       <li>
-         <a href="iguanair.html">iguanair</a> receives and sends
-         IR data using the IguanaIR devices.</li>
+         <a href="https://github.com/iguanaworks/iguanair-lirc">iguanair></a>
+         receives and sends IR data using the IguanaIR devices.</li>
       <li>
          <a href="irtoy.html">irtoy</a> recieves and sends IR data
          using the Dangerous Prototypes IrToy device.</li>
