@@ -148,10 +148,27 @@
                 <LI><!-- A HREF="http://svadim.no-ip.org/sw/lirc/" -->Bluetooth mobile phones<!-- /A --></LI>
                 <LI>Creative iNFRA CDROM</LI>
                 <LI>Creative Infra Receiver/CIMR100</LI>
-                <LI>Creative LiveDrive></LI>
-                <LI><A HREF="http://dangerousprototypes.com/docs/USB_Infrared_Toy">Dangerous Prototypes IR-Toy</A></LI>
-                <LI>Iguanaworks serial port transceiver</LI>
-                <LI>Iguanaworks USB transceiver</LI>
+                <LI>Creative LiveDrive</LI>
+                <LI>
+                  <A HREF="http://dangerousprototypes.com/docs/USB_Infrared_Toy">
+                     Dangerous Prototypes IR-Toy
+                  </A>
+                </LI>
+                <LI>
+                  <A HREF="http://www.iguanaworks.net/">
+		    Iguanaworks serial port transceiver
+		  </A>
+               </LI>
+                <LI>
+                  <A HREF="http://www.iguanaworks.net/">
+                    Iguanaworks USB transceiver
+		  </A>
+               </LI>
+                <LI>
+                  <A HREF="http://www.yard2usb.de/joomla/index.php/y-a-r-d-2-usb">
+                    Y.A.R.D.2 Do-it-yourself IR transciever kit.
+		  </A>
+               </LI>
                 <LI>InnovationOne's COMMANDIR USB Transceiver</LI>
                 <LI>Ira (InfraRed Adapter)</LI>
                 <LI>IRdeo</LI>
