@@ -27,3 +27,6 @@ repeat-max      = 600
 [lircmd]
 uinput          = False
 nodaemon        = False
+
+# [modinit]
+# code = modprobe lirc_serial
